# system_design_lab_2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.py  openapi.yaml  requirements.txt  tests.py
configs/: static_config.yaml
src/: api_types.hpp  api_utils.cpp  api_utils.hpp  fitness_storage.cpp  fitness_storage.hpp  handlers.cpp  handlers.hpp  main.cpp
